# daily-tech

./: .gitignore  README.md  dtech.py  pyproject.toml
docs/superpowers/plans/: 2026-03-28-ai-research-papers.md  2026-03-31-report-visuals.md  2026-04-16-acl-sdp-papers.md
docs/superpowers/specs/: 2026-03-28-ai-research-papers-design.md  2026-03-31-report-visuals-design.md  2026-04-16-acl-sdp-papers-design.md
tests/: test_acl_sdp_fetcher.py  test_integration_acl.py  test_papers.py  test_rank_papers_source_aware.py  test_shown_papers.py
tests/fixtures/acl/: sdp_empty_abstract.xml  sdp_landing_page.html  sdp_malformed.xml  sdp_page1_with_token.xml  sdp_page2_final.xml  sdp_single_record.xml
