[project]
name = "daily-tech"
version = "0.1.0"
description = "Daily tech intelligence report from GitHub"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "hishel>=0.1",
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "acl-anthology>=1.1.0",
    "markdownify>=0.13",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "integration: opt-in tests that hit live external endpoints",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
